--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,7 @@
 .banner{
     background-image: linear-gradient(#063053b3, #063053b3), url('../public/universityBackground.af009eb84471c0cfafad.png');
 }
+
+.card{
+    border-radius: 120px 40px 120px 40px;
+}
